--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "firebase": "^10.11.1",
+    "flowbite-react": "^0.9.0",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-loading-skeleton": "^3.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
