--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^2.0.6",
+    "@tanstack/react-query": "^5.32.1",
     "firebase": "^10.11.1",
     "flowbite-react": "^0.9.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-loading-skeleton": "^3.4.0"
+    "react-loading-skeleton": "^3.4.0",
+    "viem": "^2.9.31",
+    "wagmi": "^2.8.0"
   },
   "devDependencies": {
     "@types/node": "^20",
