--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@rainbow-me/rainbowkit": "^2.0.6",
     "@tanstack/react-query": "^5.32.1",
     "firebase": "^10.11.1",
+    "flowbite": "^2.3.0",
     "flowbite-react": "^0.9.0",
     "next": "14.2.3",
     "react": "^18",
