--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-loading-skeleton": "^3.4.0",
+    "react-toastify": "^10.0.5",
     "viem": "^2.9.31",
     "wagmi": "^2.8.0"
   },
