--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.0.6",
+    "@react-icons/all-files": "^4.1.0",
     "@tanstack/react-query": "^5.32.1",
     "firebase": "^10.11.1",
     "flowbite": "^2.3.0",
@@ -19,6 +20,7 @@
     "react-dom": "^18",
     "react-loading-skeleton": "^3.4.0",
     "react-toastify": "^10.0.5",
+    "react-vertical-timeline-component": "^3.6.0",
     "viem": "^2.9.31",
     "wagmi": "^2.8.0"
   },
@@ -26,6 +28,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-vertical-timeline-component": "^3.3.6",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
