--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-loading-skeleton": "^3.4.0",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5",
     "react-vertical-timeline-component": "^3.6.0",
     "viem": "^2.9.31",
